[rs-dam] Handle scope in AIP urls send to storage.
Former-commit-id: a4f982fb093b9f1770eccb2722275ee6c5031910